--- a/Event Registration.html
+++ b/Event Registration.html
@@ -43,12 +43,13 @@ width: 100%;
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
+  
  
 }
 </style>
 </head>
 <body>
-  <img src="./images/Workshops/E-Conclave Logo (White).png" alt="" class="logo1">
+  
 
       
 
@@ -206,9 +207,10 @@ width: 100%;
         </button>
       </div>
       </section>-->
-      <section id="testimonials" class="testimonials" style="position: relative;top: 13%;">
+      <section id="testimonials" class="testimonials" style="position: relative;top:0;">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
+            <img src="./images/Workshops/E-Conclave Logo (White).png" alt="" class="logo1" style="padding-bottom: 50px;">
             <h2 style="color: white;">Register for our Events</h2>
           </div>
   
