--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               <p>
                 Entrepreneurship Cell, GLAU is a student run, non-profit organization solely formed with the purpose of inspiring & guiding start-ups and believes that Entrepreneurship is the key to India's development. We aim to develop an Entrepreneurial Spirit among students and share a vision to foster innovation and budding ideas in youth.
               </p>
-              <a href="#" class="about-btn"><span>About us</span> <i class="bx bx-chevron-right"></i></a>
+              <a href="./AboutUs.html#" class="about-btn"><span>About us</span> <i class="bx bx-chevron-right"></i></a>
             </div>
           </div>
           <div class="col-xl-7 d-flex align-items-stretch">
