--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Frequently Asked Questions</h2>
+          <h2><span class="nomediaquery">Frequently Asked Questions</span><span class="mediaquery">FAQ</span></h2>
         </div>
 
         <ul class="faq-list accordion" data-aos="fade-up">
