--- a/AboutUs.html
+++ b/AboutUs.html
@@ -90,7 +90,7 @@
         <div class="container" data-aos="zoom-in">
   
           <div class="clients-slider swiper">
-            <div class="section-title">
+            <div class="section-title aboutUsSectionTitle">
               <h2>About E-Cell</h2>
             </div>
             Entrepreneurship Cell, GLAU is a student run, non-profit organization solely formed with the purpose of inspiring & guiding start-ups and believes that Entrepreneurship is the key to India's development. We aim to develop an Entrepreneurial Spirit among students and share a vision to foster innovation and budding ideas in youth.
