--- a/AboutUs.html
+++ b/AboutUs.html
@@ -105,7 +105,7 @@
       <section id="team" class="team section-bg" style="top: 100px;">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
-            <h2 style="color: white;font-size: 100px;text-align: center;">COMING SOON</h2>
+            <h2 class="AboutUsContent">COMING SOON</h2>
           </div>
 
 </div>
