--- a/index.html
+++ b/index.html
@@ -270,22 +270,22 @@
         <ul class="nav nav-tabs row d-flex">
           <li class="nav-item col-3">
             <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#tab-1">
-              <h4>Members</h4>
+              <h4 class="tabsContent">Members</h4>
             </a>
           </li>
           <li class="nav-item col-3">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-2">
-              <h4>Events</h4>
+              <h4 class="tabsContent">Events</h4>
             </a>
           </li>
           <li class="nav-item col-3">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-3">
-              <h4>Talks</h4>
+              <h4 class="tabsContent">Talks</h4>
             </a>
           </li>
           <li class="nav-item col-3">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-4">
-              <h4>StartUps</h4>
+              <h4 class="tabsContent">StartUps</h4>
             </a>
           </li>
         </ul>
