--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 
   <div class="carousel-content">
-      <h1 class="hero-title mt-0" style="font-size: 80px;"><span style="color: #e86105;display: inline">E</span>ntrepreneurship <span style="color: #e86105">Cell</span></h1>
+      <h1 class="hero-title mt-0"><span class="hero-e">E</span>ntrepreneurship <span style="color: #e86105">Cell</span></h1>
       <p style="font-size: 25px;margin-bottom: 0px;margin-top: 2px;">IDEAS. ACTIONS. RESULTS.</p>
       <h1 style="font-size: 45px;">GLA University, Mathura</h1>
   </div>
