--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 
 
   <div class="carousel-content">
-      <h1 class="hero-title mt-0"><span class="hero-e">E</span>ntrepreneurship <span style="color: #e86105">Cell</span></h1>
-      <p style="font-size: 25px;margin-bottom: 0px;margin-top: 2px;">IDEAS. ACTIONS. RESULTS.</p>
-      <h1 style="font-size: 45px;">GLA University, Mathura</h1>
+      <h1 class="hero-title mt-0"><span class="hero-e">E</span>ntrepreneurship <span class="hero-cell">Cell</span></h1>
+      <p>IDEAS. ACTIONS. RESULTS.</p>
+      <h1 class="hero-gla">GLA University, Mathura</h1>
   </div>
   <div id="carouselExampleControls" class="carousel slide carousel-fade" data-bs-ride="carousel" data-interval="2000" style="z-index: 0;">
       <div class="carousel-inner">
