--- a/index.html
+++ b/index.html
@@ -912,21 +912,7 @@
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
 
-          <div class="swiper-slide d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="member-img">
-                <img src="./images/PJSir255-01.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href="https://www.facebook.com/pramod.k.joshi.12" target="blank"><i class="bi bi-facebook"></i></a>
-                  <a href="https://www.linkedin.com/in/dr-pramod-joshi-3774253" target="blank"><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Dr. Pramod Joshi</h4>
-                <span>Chief Mentor</span>
-              </div>
-            </div>
-          </div>
+          
 
           <div class="swiper-slide d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
@@ -943,11 +929,26 @@
               </div>
             </div>
           </div>
+          <div class="swiper-slide d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="member-img">
+                <img src="./images/PramodSir.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href="https://www.facebook.com/pramod.k.joshi.12" target="blank"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.linkedin.com/in/dr-pramod-joshi-3774253" target="blank"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Dr. Pramod Joshi</h4>
+                <span>Chief Mentor</span>
+              </div>
+            </div>
+          </div>
 
           <div class="swiper-slide d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src="./images/ManojSir255-01.jpg" class="img-fluid" alt="">
+                <img src="./images/ManojSir.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href="https://www.facebook.com/drmanojchoubey/" target="blank"><i class="bi bi-facebook"></i></a>
                   <a href="https://www.linkedin.com/in/dr-manoj-kumar-58535114" target="blank"><i class="bi bi-linkedin"></i></a>
