--- a/index.html
+++ b/index.html
@@ -735,13 +735,13 @@
        </div>
        <div class="cards">
         <div class="card-carousel">
-          <div class="my-card"><a href='./TeamPage1.0.html#' class="get-started-btn scrollto SC" ><span style="text-align: center;">View Team</span></a></div>
-          <div class="my-card"><a href="./TeamPage2.0.html#" class="get-started-btn scrollto SC"><span style="text-align: center;">View Team</span></a></div>
-          <div class="my-card"><a href="./TeamPage3.0.html#" class="get-started-btn scrollto SC" ><span style="text-align: center;">View Team</span></a></div>
-          <div class="my-card"><a href="./TeamPage4.0.html#" class="get-started-btn scrollto SC"><span style="text-align: center;">View Team</span></a></div>
-          <div class="my-card"><a href="./TeamPage5.0.html#" class="get-started-btn scrollto SC"><span style="text-align: center;">View Team</span></a></div>
-          <div class="my-card"><a href="./TeamPage6.0.html#" class="get-started-btn scrollto SC"><span style="text-align: center;">View Team</span></a></div>
-          <div class="my-card"><a href="./TeamPage7.0.html#" class="get-started-btn scrollto SC"><span style="text-align: center;">View Team</span></a></div>
+          <div class="my-card"><a href='./TeamPage1.0.html#' class="get-started-btn scrollto SC" ><span class="scButtonText">View Team</span></a></div>
+          <div class="my-card"><a href="./TeamPage2.0.html#" class="get-started-btn scrollto SC"><span class="scButtonText">View Team</span></a></div>
+          <div class="my-card"><a href="./TeamPage3.0.html#" class="get-started-btn scrollto SC" ><span class="scButtonText">View Team</span></a></div>
+          <div class="my-card"><a href="./TeamPage4.0.html#" class="get-started-btn scrollto SC"><span class="scButtonText">View Team</span></a></div>
+          <div class="my-card"><a href="./TeamPage5.0.html#" class="get-started-btn scrollto SC"><span class="scButtonText">View Team</span></a></div>
+          <div class="my-card"><a href="./TeamPage6.0.html#" class="get-started-btn scrollto SC"><span class="scButtonText">View Team</span></a></div>
+          <div class="my-card"><a href="./TeamPage7.0.html#" class="get-started-btn scrollto SC"><span class="scButtonText">View Team</span></a></div>
         </div>
         
       </div>
