--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
           <div class="swiper-slide d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
-                <img src="./images/AnoopSir255-01.jpg" class="img-fluid" alt="">
+                <img src="./images/AnoopSir.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href="https://www.facebook.com/anoop.gupta.3538" target="blank"><i class="bi bi-facebook"></i></a>
                   <a href="https://www.linkedin.com/in/anoop-gupta-61236717" target="blank"><i class="bi bi-linkedin"></i></a>
@@ -964,7 +964,7 @@
           <div class="swiper-slide d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
-                <img src="./images/RaviSir255-01.jpg" class="img-fluid" alt="">
+                <img src="./images/Ravi sir.png" class="img-fluid" alt="">
                 <div class="social">
                   <a href="#" target="blank"><i class="bi bi-twitter"></i></a>
                   <a href="https://www.linkedin.com/in/ravitiwari90/" target="blank"><i class="bi bi-linkedin"></i></a>
