--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <div class="content">
               <h3 style="margin-bottom: 5px;">Entrepreneurship Cell</h3><h4>GLA University, Mathura</h4>
               <p>
-                Entrepreneurship Cell, GLAU is a student run, non-profit organization solely formed with the purpose of inspiring & guiding start-ups and believes that Entrepreneurship is the key to India's development. We aim to develop an Entrepreneurial Spirit among students and share a vision to foster innovation and budding ideas in youth.
+                Entrepreneurship Cell, GLAU is a student run, non-profit organization solely formed with the purpose of inspiring & guiding students towards entrepreneurship. E-Cell believes start-ups and Entrepreneurship is the key to India's development. We aim to develop an Entrepreneurial Spirit among students and share a vision to foster innovation and budding ideas in youth.
               </p>
               <a href="./AboutUs.html#" class="about-btn"><span>About us</span> <i class="bx bx-chevron-right"></i></a>
             </div>
