--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <li><a  href="#pricing">Team</a></li>
           <li><a  href="#team">Mentors</a></li>
           <li><a  href="#contact">Contact</a></li>
-        <a href="https://e-conclave21.netlify.app/" class="get-started-btn scrollto E-Conclave"><span>E-Conclave'22</span></a>
+        <a href="https://veerprakash28.github.io/E-Conclave-22-Event-Registration/" class="get-started-btn scrollto E-Conclave"><span>E-Conclave'22</span></a>
    
             <label for="chk" class="hide-btn">
               <i class="fa-solid fa-xmark"></i>
@@ -114,7 +114,7 @@
           <img class="d-block w-100" src="./images/gallery/yt3.jpg" alt="First slide" style="opacity: 0.4;width: 100%;">
         </div>
         <div class="carousel-item" style=" background-color: #000000;">
-          <img class="d-block w-100" src="./images/gallery/pik19.jpg" alt="Second slide"  style="opacity: 0.4;width: 100%;">
+          <img class="d-block w-100" src="./images/gallery/pik19.JPG" alt="Second slide"  style="opacity: 0.4;width: 100%;">
          
         </div>
         <div class="carousel-item" style=" background-color: #000000;">
